Fix API authentication and environment configuration: add run.bat for one-click setup and launch, centralize .env handling, implement secure API key storage, fix token issues in image generation, use consistent Unix timestamp format, improve error handling and diagnostic logging

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ src/maps
 
 scripts/strip_comments.py
 
-src/project/log.txt
+log.txt
 src/project/temp.py
 src/project/temp2.py
 src/project/temp3.py
