--- a/.gitignore
+++ b/.gitignore
@@ -13,25 +13,18 @@ venv/
 build/
 dist/
 
-osu-tools/
-
 .env
 *.bak
 
 src/results/
 src/cache/
-src/assets/images/avatar
-src/assets/images/cover
+src/assets/images/
 src/csv/
 src/maps
 
 scripts/strip_comments.py
 
 log.txt
-src/project/temp.py
-src/project/temp2.py
-src/project/temp3.py
-src/project/temp4.py
 
 src/config/
 
