Deep refactoring with OsuApiClient integration - centralized API logic, improved caching and rate limiting, secure API key management via keyring, thread-safe database operations, optimized parallel task processing, and enhanced GUI stability for a more robust application architecture

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ CSV_DIR=../csv/
 # Performance Configuration
 GUI_THREAD_POOL_SIZE=24   # For QThreadPool in GUI module
 THREAD_POOL_SIZE=16       # For ThreadPoolExecutor in file_parser.py
+IO_THREAD_POOL_SIZE=32    # For I/O operations in analyzer.py
 
 # Download Configuration
 MAP_DOWNLOAD_TIMEOUT=30
