--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ IO_THREAD_POOL_SIZE=32    # For I/O operations in analyzer.py
 # Download Configuration
 MAP_DOWNLOAD_TIMEOUT=30
 DOWNLOAD_RETRY_COUNT=3
+CHECK_MISSING_BEATMAP_IDS=False
 
 # API Configuration
 API_RETRY_COUNT=3
