Deep refactor of core logic, GUI, and data management
Key Architectural Changes:

1. Modular Decomposition: Cumbersome modules (analyzer, gui, file_parser) were broken down. Helper functions have been extracted into new `utils.py` and `path_utils.py` files, improving code reusability and readability.
2. Centralized Configuration (app_config.py): Instead of a simple `config.py`, an `app_config.py` module using `python-dotenv` has been implemented. It now automatically creates a default `.env` file with settings and comments on first run, significantly simplifying initial setup for the user.
3. Database as the Single Source of Truth: The caching system has been completely redesigned. Instead of a fragile system of multiple JSON files (osr_cache.json, md5_cache.json) and in-memory dictionaries, a unified SQLite database (database.py) is now used as the primary source for cached map data.
4. Improved Logging System (main.py): A logging system has been implemented that creates a separate timestamped subdirectory for each application run. This preserves the log history and simplifies debugging. Automatic cleanup of old logs has also been added.

GUI Changes (gui.py):

New `UserProfileWidget` Component: Instead of simple input fields for nickname and settings, a full-fledged user profile widget has been implemented.
1. Displays "logged in / logged out" state.
2. Loads and displays the user's avatar.
3. Dynamically shows current stats (PP, accuracy, rank).
4. Convenient icon-based toggle buttons for scan settings, replacing the separate "Settings" window.

Improved UX: The login process is now explicit. It is now possible to change users and log out. Editing fields (nickname, number of scores) now happens inline within the widget (QStackedWidget), which looks more modern.

Improved Validation: The `ApiDialog` now includes the username input and provides clearer feedback on validation errors.
`ResultsWindow` Refactoring: The results window now loads data more reliably from a

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-requests
-Pillow
-PySide6
-python-dotenv
-rosu-pp-py
-keyring
-pandas
-pyperclip
+pyside6==6.9.0
+pandas==2.2.*
+requests==2.*
+pillow==11.*
+python-dotenv==1.*
+keyring==25.*
+rosu-pp-py>=3
+pyperclip==1.8.1
