--- a/.env
+++ b/.env
@@ -2,17 +2,17 @@
 CUTOFF_DATE=1730114220
 
 # Logging Configuration
-LOG_LEVEL=INFO
-LOG_DIR=../log
+LOG_LEVEL=DEBUG
+LOG_DIR=log
 
 # Database Configuration
-DB_FILE=../cache/beatmap_info.db
+DB_FILE=beatmap_info.db
 
 # Path Settings
-CACHE_DIR=../cache/
-RESULTS_DIR=../results/
-MAPS_DIR=../maps/
-CSV_DIR=../csv/
+CACHE_DIR=cache
+RESULTS_DIR=results
+MAPS_DIR=maps
+CSV_DIR=csv
 
 # Performance Configuration
 GUI_THREAD_POOL_SIZE=24   # For QThreadPool in GUI module
