--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ __pycache__/
 .venv/
 venv/
 
+.env
+.env.*
+!.env.example
+
 .vscode/
 .idea/
 
@@ -15,13 +19,10 @@ dist/
 
 *.bak
 
-results/
 cache/
-csv/
-maps/
-log/
-config/
+data/
 scripts/
+log/
 
 build.py
 bootstrap.py
