Configure production URLs as defaults for end users
1. Update DEFAULT_ENV_CONTENT to use production API URLs
2. Change .env.example to production configuration
3. Add note about .env.dev for local development
4. Ensure .exe builds and git clones work out-of-the-box

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,13 @@ CHECK_MISSING_BEATMAP_IDS=False
 API_RETRY_COUNT=3
 API_RETRY_DELAY=0.5
 API_REQUESTS_PER_MINUTE=60
+# WARNING: peppy prohibits using more than 60 requests per minute
+# Burst spikes up to 1200 requests per minute are possible, but proceed at your own risk
+# It may result in API/website usage ban
+# More than 1200 requests per minute will not work (upper limit)
 
-# OAuth Configuration - DEVELOPMENT (localhost)
-BACKEND_BASE_URL=http://127.0.0.1:8000
-FRONTEND_BASE_URL=http://localhost:5174
+# OAuth Configuration - PRODUCTION
+BACKEND_BASE_URL=https://api.lemon4ik.kz
+FRONTEND_BASE_URL=https://lost.lemon4ik.kz
+
+# For local development, copy .env.dev to .env instead
