Refactor storage layout

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,9 @@ DB_FILE=beatmap_info.db
 
 # Path Settings
 CACHE_DIR=cache
-DATA_DIR=data
-MAPS_DIR=data/maps
-LOG_DIR=data/logs
-ANALYSIS_DIR=data/analysis
-IMAGES_DIR=data/images
+MAPS_DIR=cache/maps
+LOG_DIR=cache/logs
+RESULTS_DIR=results
 
 # Performance Configuration
 GUI_THREAD_POOL_SIZE=24
